# AsteRogue

./: .gitignore  CMakeLists.txt  README
engine/: CMakeLists.txt
engine/headers/: app.h  game.h  statemanager.h  title.h  utility.hpp
engine/headers/components/: background.h  gauge.h  player.h
engine/headers/states/: game.h  state.h  statenum.h  states.h  title.h
engine/src/: app.cpp  background.cpp  game.cpp  gauge.cpp  player.cpp  state.cpp  title.cpp
src/: hello.cpp
